k8s/deployments/probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-probes
  namespace: exam
spec:
  containers:
    - name: frontend
      image: amineleny3/frontend-image:latest
      ports:
        - containerPort: 5173
      livenessProbe:
        httpGet:
          path: /healthz
          port: 5173
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /readiness
          port: 5173
        initialDelaySeconds: 5
        periodSeconds: 10
      startupProbe:
        httpGet:
          path: /start
          port: 5173
        initialDelaySeconds: 10
        periodSeconds: 5
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"

---
apiVersion: v1
kind: Pod
metadata:
  name: backend-probes
  namespace: exam
spec:
  containers:
    - name: backend
      image: amineleny3/backend-image:latest
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /readiness
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      startupProbe:
        httpGet:
          path: /start
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 5
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"

---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-probes
  namespace: exam
spec:
  containers:
    - name: postgres
      image: amineleny3/postgres:latest
      ports:
        - containerPort: 5432
      livenessProbe:
        exec:
          command:
            - pg_isready
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        exec:
          command:
            - pg_isready
        initialDelaySeconds: 5
        periodSeconds: 10
      startupProbe:
        exec:
          command:
            - pg_isready
        initialDelaySeconds: 10
        periodSeconds: 5
      resources:
        requests:
          memory: "512Mi"
          cpu: "500m"
        limits:
          memory: "1Gi"
          cpu: "1"
